--- a/DOPAgent/ClientApp/package.json
+++ b/DOPAgent/ClientApp/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^15.2.8",
     "@angular/platform-server": "^15.2.8",
     "@angular/router": "^15.2.8",
+    "@microsoft/signalr": "^7.0.12",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.4",
     "ngx-cookie-service": "^16.0.1",
