--- a/DOPAgent/DOPAgent.csproj
+++ b/DOPAgent/DOPAgent.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Dapper" Version="2.1.4" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.12" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="8.0.0-preview.5.23302.2">
       <!-- The SPA Proxy is only used at development time -->
       <Publish>false</Publish>
